Archive2/34/160d76f4d6e52e/output
main.cpp: In function 'int main()':
main.cpp:10:23: error: invalid initialization of non-const reference of type 'std::string& {aka std::basic_string<char>&}' from an rvalue of type 'const char*'
     std::string& s4 = "hi there";
                       ^
